# nanocodex

./: .git-blame-ignore-revs  .gitignore  .prettierignore  Dockerfile  Dockerfile.languages  README.md  docker-compose.cluster.yml  docker-compose.slack.yml  docker-compose.yml  flake.nix  ruff.toml
.github/: CONTRIBUTING.md
browser-mcp-server/: README.md  package-lock.json  package.json  server.js
client/: Dockerfile  demo.py  pyproject.toml
client/nanocodex_client/: __init__.py  api.py  cli.py  cluster.py  core.py  mcp_server.py  proto_adapt.py
client/nanocodex_client/agui/: PHASE0.md  README.md  __init__.py  agents.py  app.py  backends.py  craftos_solve.py  cronexpr.py  jobs.py  jobs_api.py  jobs_tools.py  mapper.py  router.py  sandbox.py  state_store.py  state_store_conformance.py  threads.py  ui_tools.py
client/nanocodex_client/agui/web/: index.html
client/nanocodex_client/proto/nanocodex/v1/: __init__.py
client/tests/: test_agui_agents.py  test_agui_backends.py  test_agui_craftos_solve.py  test_agui_image_input.py  test_agui_mapper.py  test_agui_router.py  test_agui_sandbox.py  test_agui_threads.py  test_cluster.py  test_core.py  test_cronexpr.py  test_jobs.py  test_jobs_api.py  test_proto.py  test_state_store.py  test_ui_tools.py
client/tests/e2e/: run.sh  smoke_realmodel.py  test_agui_approvals.py  test_agui_browser.py
codex-home/: config.toml
docs/: mcp-service-url.md  nix-cache.md
frontend/: README.md  next.config.js  package-lock.json  package.json
integration/: README.md  codex-config.test.toml  docker-compose.codex.yml  fakemodel.py  (+8 more)
(+98 files in other folders)
